--- a/aboutme.html
+++ b/aboutme.html
@@ -3,88 +3,139 @@ layout: page
 ---
 
 
+<div class="experience-box">
+	<h2>Professional experience</h2>
+	<br>
 
-<ul>
-  <li>Item 1</li>
-  <li>Item 2</li>
-  <li>Item 3
-    <ul>
-      <li>Subitem 1</li>
-      <li>Subitem 2</li>
-    </ul>
-  </li>
-  <li>Item 4</li>
-</ul>
+	<div class="experience">
+	  <img src="{{ '/assets/img/uic-logo.png' | relative_url }}" alt="Paper 1" class="experience-image">
+	  <div class="experience-box">
+		  <div class="experience-container">
+		  	<p><strong>Research Assistant</strong></p>
+			<p>2023 - present</p>
+		  </div>
+		  <p>Department of Computer Science, University of Illinois Chicago, Chicago, IL, US</p>
+		  <p>Advisor - <strong>Dr. Sidharth Kumar</strong></p>
+	  </div>
+	</div>
 
+	<div class="experience">
+	  <img src="{{ '/assets/img/berkeley-logo.jpg' | relative_url }}" alt="Paper 1" class="experience-image">
+	  <div class="experience-box">
+		  <div class="experience-container">
+		  	<p><strong>Research Intern</strong></p>
+			<p>Summer 2023</p>
+		  </div>
+		  <p>DD-Data Science Division, Lawrence Berkeley National Laboratory (Berkeley Lab), San Francisco, CA, US</p>
+		  <p>Advisor - <strong>Dr. Suren Byna</strong></p>
+	  </div>
+	</div>
 
+	<div class="experience">
+	  <img src="{{ '/assets/img/riken_logo.jpg' | relative_url }}" alt="Paper 1" class="experience-image">
+	  <div class="experience-box">
+		  <div class="experience-container">
+		  	<p><strong>Research Intern</strong></p>
+			<p>Summer 2023</p>
+		  </div>
+		  <p>Supercomputing Performance Research Team, RIKEN Center for Computational Science (R-CCS), Kobe, Japan</p>
+		  <p>Advisor - <strong>Dr. Jens Domke</strong></p>
+	  </div>
+	</div>
 
+	<div class="experience">
+	  <img src="{{ '/assets/img/argonne-logo.jpg' | relative_url }}" alt="Paper 1" class="experience-image">
+	  <div class="experience-box">
+		  <div class="experience-container">
+		  	<p><strong>Research Intern</strong></p>
+			<p>Summer 2022</p>
+		  </div>
+		  <p>Data Science Team, Argonne Leadership Computing Facility (ALCF), Chicago, IL, US</p>
+		  <p>Advisor - <strong>Dr. Venkatram Vishwanath</strong></p>
+	  </div>
+	</div>
 
+	<div class="experience">
+	  <img src="{{ '/assets/img/uab-logo.jpg' | relative_url }}" alt="Paper 1" class="experience-image">
+	  <div class="experience-box">
+		  <div class="experience-container">
+		  	<p><strong>Research Assistant</strong></p>
+			<p>2019 - 2023</p>
+		  </div>
+		  <p>Department of Computer Science, University of Alabama at Birmingham, Birmingham, AL, US</p>
+		  <p>Advisor - <strong>Dr. Sidharth Kumar</strong></p>
+	  </div>
+	</div>
 
-<div style="display: flex; justify-content: space-between;">
-  <div>
-    <strong>Research Assistant</strong><br>
-    Department of Computer Science, University of Illinois Chicago, Chicago, IL<br>
-    Advisor - Dr. Sidharth Kumar
-  </div>
-  <div>2023 - present</div>
+	<div class="experience">
+	  <img src="{{ '/assets/img/dell-emc-logo.jpeg' | relative_url }}" alt="Paper 1" class="experience-image">
+	  <div class="experience-box">
+		  <div class="experience-container">
+		  	<p><strong>Software Quality Engineer</strong></p>
+			<p>2018 - 2019</p>
+		  </div>
+		  <p>Dell EMC Shanghai, Shanghai, China</p>
+		  <p>Maintain and optimize the operating system OneFS installed in EMC’s storage product Isilon. </strong></p>
+	  </div>
+	</div>
+
+	<div class="experience">
+	  <img src="{{ '/assets/img/ericsson-logo.png' | relative_url }}" alt="Paper 1" class="experience-image">
+	  <div class="experience-box">
+		  <div class="experience-container">
+		  	<p><strong>Software Engineer</strong></p>
+			<p>2016 - 2018</p>
+		  </div>
+		  <p>Ericsson Communication Shanghai, Shanghai, China</p>
+		  <p>Verifying the performance of Ericsson’s product EPG. </strong></p>
+	  </div>
+	</div>
 </div>
-<br>
 
-<div style="display: flex; justify-content: space-between;">
-  <div>
-    <strong>Research Intern</strong><br>
-    Berkeley National Laboratory, San Francisco, US<br>
-    Advisor - Dr. Suren Byna
-  </div>
-  <div>Summer 2023</div>
-</div>
-<br>
+<div class="experience-box">
+	<h2>Teaching experience</h2>
+	<br>
 
-<div style="display: flex; justify-content: space-between;">
-  <div>
-    <strong>Research Intern</strong><br>
-    RIKEN Research Center, Kobe, Japan<br>
-    Advisor - Dr. Jens Domke
-  </div>
-  <div>Summer 2023</div>
-</div>
-<br>
+	<div class="experience">
+	  <img src="{{ '/assets/img/uic-logo.png' | relative_url }}" alt="Paper 1" class="experience-image">
+	  <div class="experience-box">
+		  <div class="experience-container">
+		  	<p><strong>Teaching assistant</strong></p>
+			<p>Fall 2024</p>
+		  </div>
+		  <p>Course: Database</p>
+		  <p>Department of Computer Science, University of Illinois Chicago, Chicago, IL, US. </strong></p>
+	  </div>
+	</div>
 
-<div style="display: flex; justify-content: space-between;">
-  <div>
-    <strong>Research Intern</strong><br>
-    Argonne National Laboratory, Chicago, US<br>
-    Advisor - Dr. Venkatram Vishwanath
-  </div>
-  <div>Summer 2022</div>
-</div>
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <div>
-    <strong>Research Assistant</strong><br>
-    Department of Computer Science, University of Alabama at Birmingham, Birmingham, AL<br>
-    Advisor - Dr. Sidharth Kumar
-  </div>
-  <div>2019 - 2023</div>
-</div>
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <div>
-    <strong>Software Quality Engineer</strong><br>
-    Dell EMC Shanghai, Shanghai, China
-  </div>
-  <div>2018 - 2019</div>
-</div>
-<br>
-
-<div style="display: flex; justify-content: space-between;">
-  <div>
-    <strong>Software Engineer</strong><br>
-    Ericsson Communication Shanghai, Shanghai, China
-  </div>
-  <div>2016 - 2018</div>
+	<div class="experience">
+	  <img src="{{ '/assets/img/tongji-logo.png' | relative_url }}" alt="Paper 1" class="experience-image">
+	  <div class="experience-box">
+		  <div class="experience-container">
+		  	<p><strong>Teaching assistant</strong></p>
+			<p>Fall 2014</p>
+		  </div>
+		  <p>Course: C Programming Language</p>
+		  <p>Department of Software Engineering, University of Tongji, Shanghai, China. </strong></p>
+	  </div>
+	</div>
 </div>
 
+
+<div class="experience-box">
+	<h2>Training experience</h2>
+	<br>
+
+	<div class="experience">
+	  <img src="{{ '/assets/img/argonne-logo.jpg' | relative_url }}" alt="Paper 1" class="experience-image">
+	  <div class="experience-box">
+		  <div class="experience-container">
+		  	<p><strong>The Argonne Training Program on Extreme-Scale Computing (ATPESC)</strong></p>
+			<p>Summer 2022</p>
+		  </div>
+		  <p>Argonne Leadership Computing Facility (ALCF), Chicago, IL, US. </strong></p>
+		  <p>Visit <a href="https://extremecomputingtraining.anl.gov/atpesc-2022/">here</a> for more information.</p>
+	  </div>
+	</div>
+</div>
 
