--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: home
     <br>
     Throughout my Ph.D. journey, I have made significant contributions to the field of high-performance computing, as evidenced by my publications in top-tier HPC conferences such as HPDC, HiPC, and ISC. My poster presentation at SC 2023 was recognized as the best poster finalist. I am also exploring new research areas, including GPU-aware collectives, auto performance tuning for collectives using ML, and ensemble performance visualization tools.<br>
 		<br>
-    Additionally, I was recently awarded the<a href="https://awards.acm.org/hpc-fellows"> 2024 ACM/IEEE-CS George Michael Memorial High Performance Computing Fellowship</a> (two awardees per year in the whole HPC field).
+    I was recently awarded the<a href="https://awards.acm.org/hpc-fellows"> 2024 ACM/IEEE-CS George Michael Memorial High Performance Computing Fellowship</a>.
     </p>	
   </div>
 </div>
@@ -34,7 +34,7 @@ layout: home
 	  <div class="publication-details">
 	    <h3>Configurable Algorithms for All-to-all Collectives</h3>
 	    <p> <b>Ke Fan</b>, Steve Petruzza, Thomas Gilray, Sidharth Kumar <br>
-	       The International Supercomputing Conference (ISC 2024) <br>
+	       The International Supercomputing Conference (<b>ISC</b> 2024) <br>
 	       Acceptance rate: 29% (24/83) <br>
 	       <p>Visit the <a href="/assets/papers/ISC24_alltoall.pdf">paper</a> for more information.</p>
 		</p>
@@ -46,7 +46,7 @@ layout: home
 	  <div class="publication-details">
 	    <h3>TinyProf: Towards Continuous Performance Introspection through Scalable Parallel I/O.</h3>
 	    <p> <b>Ke Fan</b>, Suraj Kesavan, Steve Petruzza, Sidharth Kumar <br>
-	       The International Supercomputing Conference (ISC 2024) <br>
+	       The International Supercomputing Conference (<b>ISC</b> 2024) <br>
 	       Acceptance rate: 29% (24/83) <br>
 	       <p>Visit the <a href="/assets/papers/vis_paper.pdf">paper</a> for more information.</p>
 		</p>
@@ -58,7 +58,7 @@ layout: home
 	  <div class="publication-details">
 	    <h3>Optimizing the Bruck Algorithm for Non-uniform All-to-all Communication.</h3>
 	    <p><b>Ke Fan</b>, Thomas Gilray, Valerio Pascucci, Xuan Huang, Kristopher Micinski, Sidharth Kumar <br>
-	       International Symposium on High-Performance Parallel and Distributed Computing (HPDC 2022) <br>
+	       International Symposium on High-Performance Parallel and Distributed Computing (<b>HPDC</b> 2022) <br>
 	       Acceptance rate: 19% <br>
 	       <p>Visit the <a href="/assets/papers/hpdc2022.pdf">paper</a> for more information.</p>
 		</p>
@@ -70,7 +70,7 @@ layout: home
 	  <div class="publication-details">
 	    <h3>Load-balancing Parallel I/O of Compressed Hierarchical Layouts.</h3>
 	    <p><b>Ke Fan</b>, Duong Hoang, Steve Petruzza, Thomas Gilray, Valerio Pascucci, Sidharth Kumar. <br>
-	       IEEE Conference On High Performance Computing, Data, and Analytics (HiPC 2021) <br>
+	       IEEE Conference On High Performance Computing, Data, and Analytics (<b>HiPC</b> 2021) <br>
 	       Acceptance rate: 23% <br>
 	       <p>Visit the <a href="/assets/papers/hipc21.pdf">paper</a> for more information.</p>
 		</p>
@@ -82,7 +82,7 @@ layout: home
 	  <div class="publication-details">
 	    <h3>Exploring MPI Collective I/O and File-per-process I/O for Checkpointing a Logical Inference task.</h3>
 	    <p><b>Ke Fan</b>, Kristopher Micinski, Thomas Gilray, Sidharth Kumar. <br>
-	       IEEE International Parallel and Distributed Processing Symposium Workshops (IPDPSW 2021)<br>
+	       IEEE International Parallel and Distributed Processing Symposium Workshops (<b>IPDPSW</b> 2021)<br>
 	       <p>Visit the <a href="/assets/papers/ws_hps103s1.pdf">paper</a> for more information.</p>
 		</p>
 	  </div>
