--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: home
 	    <h3>Configurable Algorithms for All-to-all Collectives</h3>
 	    <p> <b>Ke Fan</b>, Steve Petruzza, Thomas Gilray, Sidharth Kumar <br>
 	       The International Supercomputing Conference (<b>ISC</b> 2024) <br>
-	       Acceptance rate: 29% (24/83) <br>
+	       Acceptance rate: 29% <br>
 	       <p>Visit the <a href="/assets/papers/ISC24_alltoall.pdf">paper</a> for more information.</p>
 		</p>
 	  </div>
@@ -47,7 +47,7 @@ layout: home
 	    <h3>TinyProf: Towards Continuous Performance Introspection through Scalable Parallel I/O.</h3>
 	    <p> <b>Ke Fan</b>, Suraj Kesavan, Steve Petruzza, Sidharth Kumar <br>
 	       The International Supercomputing Conference (<b>ISC</b> 2024) <br>
-	       Acceptance rate: 29% (24/83) <br>
+	       Acceptance rate: 29% <br>
 	       <p>Visit the <a href="/assets/papers/vis_paper.pdf">paper</a> for more information.</p>
 		</p>
 	  </div>
