--- a/publications.html
+++ b/publications.html
@@ -12,8 +12,8 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Configurable Algorithms for All-to-all Collectives</h3>
 	    <p> <b>Ke Fan</b>, Steve Petruzza, Thomas Gilray, Sidharth Kumar <br>
-	       The International Supercomputing Conference (ISC 2024) <br>
-	       Acceptance rate: 29% (24/83) <br>
+	       The International Supercomputing Conference (<b>ISC</b> 2024) <br>
+	       Acceptance rate: 29% <br>
 	       <p>Visit the <a href="/assets/papers/ISC24_alltoall.pdf">paper</a> for more information.</p>
 		</p>
 	  </div>
@@ -24,7 +24,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>TinyProf: Towards Continuous Performance Introspection through Scalable Parallel I/O.</h3>
 	    <p> <b>Ke Fan</b>, Suraj Kesavan, Steve Petruzza, Sidharth Kumar <br>
-	       The International Supercomputing Conference (ISC 2024) <br>
+	       The International Supercomputing Conference (<b>ISC</b> 2024) <br>
 	       Acceptance rate: 29% (24/83) <br>
 	       <p>Visit the <a href="/assets/papers/vis_paper.pdf">paper</a> for more information.</p>
 		</p>
@@ -36,7 +36,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Investigating Data Movement Strategies for Distribution of Repartitioned Data.</h3>
 	    <p> John-Paul Robinson, <b>Ke Fan</b>, Steve Petruzza, Thomas Gilray, Sidharth Kumar. <br>
-	       Practice and Experience in Advanced Research Computing 2024: Human Powered Computing. (PEARC 2024) <br>
+	       Practice and Experience in Advanced Research Computing 2024: Human Powered Computing. (<b>PEARC</b> 2024) <br>
 	       <p>Visit the <a href="/assets/papers/PEARC-2024.pdf">paper</a> for more information.</p>
 		</p>
 	  </div>
@@ -48,7 +48,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Bruck Algorithm Performance Analysis for Multi-GPU All-to-All Communication.</h3>
 	    <p> Andres Sewell, <b>Ke Fan</b>, Ahmedur Rahman Shovon, Landon Dyken, Sidharth Kumar, Steve Petruzza. <br>
-	        2024 International Conference on High-Performance Computing in Asia-Pacific Region (HPC Asia 2024) <br>
+	        2024 International Conference on High-Performance Computing in Asia-Pacific Region (<b>HPC Asia</b> 2024) <br>
 	       <p>Visit the <a href="/assets/papers/HPC-Asia-2024.pdf">paper</a> for more information.</p>
 		</p>
 	  </div>
@@ -60,7 +60,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Optimizing the Bruck Algorithm for Non-uniform All-to-all Communication.</h3>
 	    <p><b>Ke Fan</b>, Thomas Gilray, Valerio Pascucci, Xuan Huang, Kristopher Micinski, Sidharth Kumar <br>
-	       International Symposium on High-Performance Parallel and Distributed Computing (HPDC 2022) <br>
+	       International Symposium on High-Performance Parallel and Distributed Computing (<b>HPDC</b> 2022) <br>
 	       Acceptance rate: 19% <br>
 	       <p>Visit the <a href="/assets/papers/hpdc2022.pdf">paper</a> for more information.</p>
 		</p>
@@ -72,7 +72,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Load-balancing Parallel I/O of Compressed Hierarchical Layouts.</h3>
 	    <p><b>Ke Fan</b>, Duong Hoang, Steve Petruzza, Thomas Gilray, Valerio Pascucci, Sidharth Kumar. <br>
-	       IEEE Conference On High Performance Computing, Data, and Analytics (HiPC 2021) <br>
+	       IEEE Conference On High Performance Computing, Data, and Analytics (<b>HiPC</b> 2021) <br>
 	       Acceptance rate: 23% <br>
 	       <p>Visit the <a href="/assets/papers/hipc21.pdf">paper</a> for more information.</p>
 		</p>
@@ -85,7 +85,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Threefold similarity analysis: a case study on crowdsourcing feeds.</h3>
 	    <p>Kaixu Liu, Gianmario Motta, Tianyi Ma, <b>Ke Fan</b>. <br>
-	       International Journal of Information Technology and Management 18 (IJITM 2019) <br>
+	       International Journal of Information Technology and Management 18 (<b>IJITM</b> 2019) <br>
 		</p>
 	  </div>
 	</div>
@@ -95,7 +95,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Identifying region-wide functions using urban taxicab trajectories.</h3>
 	    <p>Zhang, Daqiang, Jiafu Wan, Zongjian He, Shengjie Zhao, <b>Ke Fan</b>, Sang Oh Park, and Zhibin Jiang. <br>
-	       ACM Transactions on Embedded Computing Systems 15 (TECS 2015) <br>
+	       ACM Transactions on Embedded Computing Systems 15 (<b>TECS</b> 2015) <br>
 		</p>
 	  </div>
 	</div> 
@@ -105,7 +105,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Cloud-Based Iterative RFID Tag Search Protocol Using Bloom Filters.</h3>
 	    <p>Qian, Yuming, Daqiang Zhang, Shengjie Zhao, Xiaopeng Fan, and <b>Ke Fan</b>. <br>
-	       International Conference on Cloud Computing, Springer, Cham (CLOUD 2014) <br>
+	       International Conference on Cloud Computing, Springer, Cham (<b>CLOUD</b> 2014) <br>
 	       <p>Visit the <a href="/assets/papers/Cloud-Based-Filters.pdf">paper</a> for more information.</p>
 		</p>
 	  </div>
@@ -123,7 +123,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Analysis of MPI Communication Time for Distribution of Repartitioned Data.</h3>
 	    <p>John-Paul Robinson, <b>Ke Fan</b>, Sidharth Kumar. <br>
-	       2023 IEEE 30th International Conference on High Performance Computing, Data and Analytics Workshop (HiPCW 2023)<br>
+	       2023 IEEE 30th International Conference on High Performance Computing, Data and Analytics Workshop (<b>HiPCW</b> 2023)<br>
 	       <p>Visit the <a href="/assets/papers/MPI_for_Distribution_Data.pdf">paper</a> for more information.</p>
 		</p>
 	  </div>
@@ -134,7 +134,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>A Visual Guide to MPI All-to-all.</h3>
 	    <p>Nick Netterville, <b>Ke Fan</b>, Sidharth Kumar, Thomas Gilray. <br>
-	       4th Workshop on Education for High-Performance Computing (EduHiPC 2022)<br>
+	       4th Workshop on Education for High-Performance Computing (<b>EduHiPC</b> 2022)<br>
 	       <p>Visit the <a href="/assets/papers/visguide.pdf">paper</a> for more information.</p>
 		</p>
 	  </div>
@@ -145,7 +145,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Optimizing the Bruck Algorithm for All-to-all Communication.</h3>
 	    <p><b>Ke Fan</b>. <br>
-	       Women in High Performance Computing (WHPC), 2022<br>
+	       Women in High Performance Computing (<b>WHPC</b>), 2022<br>
 	       <p>Visit <a href="https://sc22.supercomputing.org/proceedings/workshops/workshop_pages/ws_whpc109.html">here</a> for more information.</p>
 		</p>
 	  </div>
@@ -156,7 +156,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Exploring MPI Collective I/O and File-per-process I/O for Checkpointing a Logical Inference task.</h3>
 	    <p><b>Ke Fan</b>, Kristopher Micinski, Thomas Gilray, Sidharth Kumar. <br>
-	       IEEE International Parallel and Distributed Processing Symposium Workshops (IPDPSW 2021)<br>
+	       IEEE International Parallel and Distributed Processing Symposium Workshops (<b>IPDPSW</b> 2021)<br>
 	       <p>Visit the <a href="/assets/papers/ws_hps103s1.pdf">paper</a> for more information.</p>
 		</p>
 	  </div>
@@ -167,7 +167,7 @@ layout: page
 	  <div class="publication-details">
 	    <h3>Discovering urban social functional regions using taxi trajectories.</h3>
 	    <p><b>Ke Fan</b>, Daqiang Zhang, Yunsheng Wang, and Shengjie Zhao. <br>
-	       IEEE 12th Intl Conf on Ubiquitous Intelligence and Computing and 2015 IEEE 12th Intl Conf on Autonomic and Trusted Computing and 2015 IEEE 15th Intl Conf on Scalable Computing and Communications and Its Associated Workshops (UIC-ATC-ScalCom 2015)<br>
+	       IEEE 12th Intl Conf on Ubiquitous Intelligence and Computing and 2015 IEEE 12th Intl Conf on Autonomic and Trusted Computing and 2015 IEEE 15th Intl Conf on Scalable Computing and Communications and Its Associated Workshops (<b>UIC-ATC-ScalCom</b> 2015)<br>
 	       <p>Visit the <a href="/assets/papers/Discovering.pdf">paper</a> for more information.</p>
 		</p>
 	  </div>
