--- a/award.html
+++ b/award.html
@@ -7,8 +7,8 @@ layout: page
 	<br>
 
 	<ul>
-	  <li><b>ACM/IEEE-CS George Michael Memorial High Performance Computing Fellowship</b>, 2024.</li>
-	  <li><b>Best research poster, Finalist</b>, Supercomputing Conference (SC), 2023.</li>
+	  <li><a href="https://awards.acm.org/hpc-fellows">ACM/IEEE-CS George Michael Memorial High Performance Computing Fellowship</a>, 2024.</li>
+	  <li><a href="https://sc23.conference-program.com/presentation/?id=rpost181&sess=sess307">Best research poster finalist</a>, Supercomputing Conference (SC), 2023.</li>
 	  <li><b>Travel award</b> for 10th Argonne Training Program on Extreme-Scale Computing (ATPESC), 2022.</li>
 	  <li><b>Travel Grant</b> at 31st International Symposium on High-Performance Parallel and Distributed Computing (HPDC), 2022.</li>
 	  <li><b>SIGHPC Travel Grant</b> at Supercomputing Conference (SC), 2022. </li>
