--- a/aboutme.html
+++ b/aboutme.html
@@ -148,7 +148,7 @@ layout: page
 	  <img src="{{ '/assets/img/sc23-logo.png' | relative_url }}" alt="Paper 1" class="experience-image">
 	  <div class="experience-box">
 		  <div class="experience-container">
-		  	<p><strong>Supercomputing (SC) student volunteer</strong></p>
+		  	<p><strong>Student volunteer in Supercomputing Conference (SC)</strong></p>
 			<p>2023.11</p>
 		  </div>
 		  <p> Denver, Colorado, US
